transfered new grid layout for HP

--- a/index.html
+++ b/index.html
@@ -8,7 +8,75 @@
 </head>
 <body>
 
-  <h1>My example page</h1>
+  <header class="header">
+    <a href="" class="logo">CSS Nav</a>
+    <input class="menu-btn" type="checkbox" id="menu-btn" />
+    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+    <ul class="menu">
+      <li><a href="#work">Work</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </header>
+    <div class="grid-container">
+        <div class="grid">
+            <div class="container"><img src="/images/placeholder.png" alt="placeholder">
+                <div class="project-name-on-hover">
+                    <div class="project-name">Project 1</div>
+                </div>
+            </div>
+            <div class="container"><img src="/images/placeholder.png" alt="placeholder">
+                <div class="project-name-on-hover">
+                    <div class="project-name">Project 2</div>
+                </div>
+            </div>
+            <div class="container"><img src="/images/placeholder.png" alt="placeholder">
+                <div class="project-name-on-hover">
+                    <div class="project-name">Project 3</div>
+                </div>
+            </div>
+            <div class="container"><img src="/images/placeholder.png" alt="placeholder">
+                <div class="project-name-on-hover">
+                    <div class="project-name">Project 4</div>
+                </div>
+            </div>
+            <div class="container"><img src="/images/placeholder.png" alt="placeholder">
+                <div class="project-name-on-hover">
+                    <div class="project-name">Project 5</div>
+                </div>
+            </div>
+            <div class="container"><img src="/images/placeholder.png" alt="placeholder">
+                <div class="project-name-on-hover">
+                    <div class="project-name">Project 6</div>
+                </div>
+            </div>
+            <div class="container"><img src="/images/placeholder.png" alt="placeholder">
+                <div class="project-name-on-hover">
+                    <div class="project-name">Project 7</div>
+                </div>
+            </div>
+            <div class="container"><img src="/images/placeholder.png" alt="placeholder">
+                <div class="project-name-on-hover">
+                    <div class="project-name">Project 8</div>
+                </div>
+            </div>
+            <div class="container"><img src="/images/placeholder.png" alt="placeholder" >
+                <div class="project-name-on-hover">
+                    <div class="project-name">Project 9</div>
+                </div>
+            </div>
+        </div>
+    </div>
+  <div class="footer">
+    <div id="button"></div>
+    <div id="container">
+        <div id="cont">
+            <div class="footer_center">
+                <h4>&copy; Debbie Rosenfeld 2019</h4>
+            </div>
+        </div>
+    </div>
+  </div>
 
 </body>
 </html>
