--- a/index.html
+++ b/index.html
@@ -20,47 +20,47 @@
   </header>
     <div class="grid-container">
         <div class="grid">
-            <div class="container"><img src="/images/placeholder.png" alt="placeholder">
+            <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
                 <div class="project-name-on-hover">
                     <div class="project-name">Project 1</div>
                 </div>
             </div>
-            <div class="container"><img src="/images/placeholder.png" alt="placeholder">
+            <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
                 <div class="project-name-on-hover">
                     <div class="project-name">Project 2</div>
                 </div>
             </div>
-            <div class="container"><img src="/images/placeholder.png" alt="placeholder">
+            <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
                 <div class="project-name-on-hover">
                     <div class="project-name">Project 3</div>
                 </div>
             </div>
-            <div class="container"><img src="/images/placeholder.png" alt="placeholder">
+            <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
                 <div class="project-name-on-hover">
                     <div class="project-name">Project 4</div>
                 </div>
             </div>
-            <div class="container"><img src="/images/placeholder.png" alt="placeholder">
+            <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
                 <div class="project-name-on-hover">
                     <div class="project-name">Project 5</div>
                 </div>
             </div>
-            <div class="container"><img src="/images/placeholder.png" alt="placeholder">
+            <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
                 <div class="project-name-on-hover">
                     <div class="project-name">Project 6</div>
                 </div>
             </div>
-            <div class="container"><img src="/images/placeholder.png" alt="placeholder">
+            <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
                 <div class="project-name-on-hover">
                     <div class="project-name">Project 7</div>
                 </div>
             </div>
-            <div class="container"><img src="/images/placeholder.png" alt="placeholder">
+            <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
                 <div class="project-name-on-hover">
                     <div class="project-name">Project 8</div>
                 </div>
             </div>
-            <div class="container"><img src="/images/placeholder.png" alt="placeholder" >
+            <div class="container"><img src="/src/images/placeholder.png" alt="placeholder" >
                 <div class="project-name-on-hover">
                     <div class="project-name">Project 9</div>
                 </div>
