--- a/index.html
+++ b/index.html
@@ -1,82 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Using Gulp.js for CSS tasks</title>
   <link rel="stylesheet" media="all" href="build/css/main.css">
 </head>
+
 <body>
 
   <header class="header">
-    <a href="" class="logo">CSS Nav</a>
+    <a href="" class="logo">Debbie Rosenfeld - Portfolio</a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
       <li><a href="#work">Work</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="/about.html">About</a></li>
+      <li><a href="/contact.html">Contact</a></li>
     </ul>
   </header>
-    <div class="grid-container">
-        <div class="grid">
-            <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
-                <div class="project-name-on-hover">
-                    <div class="project-name">Project 1</div>
-                </div>
-            </div>
-            <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
-                <div class="project-name-on-hover">
-                    <div class="project-name">Project 2</div>
-                </div>
-            </div>
-            <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
-                <div class="project-name-on-hover">
-                    <div class="project-name">Project 3</div>
-                </div>
-            </div>
-            <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
-                <div class="project-name-on-hover">
-                    <div class="project-name">Project 4</div>
-                </div>
-            </div>
-            <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
-                <div class="project-name-on-hover">
-                    <div class="project-name">Project 5</div>
-                </div>
-            </div>
-            <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
-                <div class="project-name-on-hover">
-                    <div class="project-name">Project 6</div>
-                </div>
-            </div>
-            <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
-                <div class="project-name-on-hover">
-                    <div class="project-name">Project 7</div>
-                </div>
-            </div>
-            <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
-                <div class="project-name-on-hover">
-                    <div class="project-name">Project 8</div>
-                </div>
-            </div>
-            <div class="container"><img src="/src/images/placeholder.png" alt="placeholder" >
-                <div class="project-name-on-hover">
-                    <div class="project-name">Project 9</div>
-                </div>
-            </div>
+  <div class="grid-container">
+    <div class="grid">
+      <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
+        <div class="project-name-on-hover">
+          <div class="project-name">Project 1</div>
         </div>
+      </div>
+      <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
+        <div class="project-name-on-hover">
+          <div class="project-name">Project 2</div>
+        </div>
+      </div>
+      <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
+        <div class="project-name-on-hover">
+          <div class="project-name">Project 3</div>
+        </div>
+      </div>
+      <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
+        <div class="project-name-on-hover">
+          <div class="project-name">Project 4</div>
+        </div>
+      </div>
+      <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
+        <div class="project-name-on-hover">
+          <div class="project-name">Project 5</div>
+        </div>
+      </div>
+      <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
+        <div class="project-name-on-hover">
+          <div class="project-name">Project 6</div>
+        </div>
+      </div>
+      <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
+        <div class="project-name-on-hover">
+          <div class="project-name">Project 7</div>
+        </div>
+      </div>
+      <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
+        <div class="project-name-on-hover">
+          <div class="project-name">Project 8</div>
+        </div>
+      </div>
+      <div class="container"><img src="/src/images/placeholder.png" alt="placeholder">
+        <div class="project-name-on-hover">
+          <div class="project-name">Project 9</div>
+        </div>
+      </div>
     </div>
+  </div>
   <div class="footer">
     <div id="button"></div>
     <div id="container">
-        <div id="cont">
-            <div class="footer_center">
-                <h4>&copy; Debbie Rosenfeld 2019</h4>
-            </div>
+      <div id="cont">
+        <div class="footer_center">
+          <h4>&copy; Debbie Rosenfeld 2019</h4>
         </div>
+      </div>
     </div>
   </div>
 
 </body>
+
 </html>
