started about page

--- a/about.html
+++ b/about.html
@@ -11,7 +11,20 @@
   </ul>
 </header>
 <main>
-  
+  <div class="about-me-wrapper">
+    <div class='about-me-row'>
+      <div class="about-me-column">
+        <div class='profile-photo'>
+        Some Text in Column One
+        </div>
+      </div>
+      <div class='about-me-column'>
+        <div class='about-me-text'>
+        Some Text in Column Two
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
 
 
