need to get 2 col image and text working responsively

--- a/about.html
+++ b/about.html
@@ -1,4 +1,9 @@
-<link rel="stylesheet" media="all" href="build/css/main.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>Using Gulp.js for CSS tasks</title>
+  <link rel="stylesheet" media="all" href="build/css/main.css">
+</head>
 
 <header class="header">
   <a href="" class="logo">Debbie Rosenfeld - Portfolio</a>
@@ -10,19 +15,11 @@
     <li><a href="/contact.html">Contact</a></li>
   </ul>
 </header>
+
+<body>
 <main>
-  <div class="about-me-wrapper">
-    <div class='about-me-row'>
-      <div class="about-me-column">
-        <div class='profile-photo'>
-        Some Text in Column One
-        </div>
-      </div>
-      <div class='about-me-column'>
-        <div class='about-me-text'>
-        Some Text in Column Two
-        </div>
-      </div>
+  <div class="about-me-container">
+    <div class="my-photo">
     </div>
   </div>
 </main>
@@ -38,3 +35,5 @@
     </div>
   </div>
 </div>
+</body>
+</html>
