background image for about page working responsively

--- a/about.html
+++ b/about.html
@@ -18,10 +18,9 @@
 
 <body>
 <main>
-  <div class="about-me-container">
-    <div class="my-photo">
+    <div class="hero-image">
+
     </div>
-  </div>
 </main>
 
 
