--- a/about.html
+++ b/about.html
@@ -20,8 +20,11 @@
 <main>
     <section class="hero-image">
       <div class="about-me-text">
-          <h1>Hello There!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <h1 class="header-text">Hello There!</h1>
+            <p>Thanks for coming to my about page! It’s nice to know that I've kept your attention for more than 15 seconds with all my beautiful and functional designs.</p>
+              <p>I know you must be busy looking at a thousand other portfolio's, so I'll get right to the reason you're here.</p>
+                <p>I'm a UI/UX/Web Designer with a background in creative graphic design. I started out in print design in the early 2010's, where I focused on branding, logos, print production and marketing content. As we all know, web > print, so in 2017 I took a good hard look at my career and decided to switch directions and enter the world of designing for the internet.</p>
+                  <p>In January 2018, I quit my comfy full time graphic design job to dive head first into web development. I attended Bitmaker's Full Time Web Dev bootcamp, and throughout my time there I immersed myself in learning web development. My goal was to be that Designer/Developer Unicorn, not just to catch the eye of recruiters, but more so to nurture my future as a designer. Learning and g</p>
       </div>
     </section>
 </main>
