--- a/contact.html
+++ b/contact.html
@@ -17,34 +17,23 @@
   </ul>
 </header>
 <section class="hero-image">
-  <div class="container">
-      <div id="form-main">
-          <div id="form-div">
-              <form class="montform" id="reused_form" >
-                  <p class="name">
-                      <input name="name" type="text" class="feedback-input" required placeholder="Name" id="name" />
-                  </p>
-                  <p class="email">
-                      <input name="email" type="email" required class="feedback-input" id="email" placeholder="Email" />
-                  </p>
-                  <p class="text">
-                      <textarea name="message" class="feedback-input" id="comment" placeholder="Message"></textarea>
-                  </p>
-                  <div class="submit">
-                      <button type="submit" class="button-blue">SUBMIT</button>
-                      <div class="ease"></div>
-                  </div>
-              </form>
-              <div id="error_message" style="width:100%; height:100%; display:none; ">
-                  <h4>
-                      Error
-                  </h4>
-                  Sorry there was an error sending your form.
-              </div>
-              <div id="success_message" style="width:100%; height:100%; display:none; "> <h2>Success! Your Message was Sent Successfully.</h2> </div>
-          </div>
-      </div>
+  <form class="contact-me-form" action="send_form_email.php" method="post">
+    <div class="form-label">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="user_name">
+    </div>
+  <div class="form-label">
+    <label for="mail">E-mail:</label>
+    <input type="email" id="mail" name="user_mail">
   </div>
+  <div class="form-label">
+    <label for="msg">Message:</label>
+    <textarea id="msg" name="user_message"></textarea>
+  </div>
+    <div class="button">
+      <button type="submit">Send your message</button>
+    </div>
+  </form>
 </section>
 
 
